apps/miniflux/components/postgres/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: miniflux-prod
        app.kubernetes.io/part-of: miniflux
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app.kubernetes.io/part-of"
                      operator: "In"
                      values:
                        - "miniflux"
                topologyKey: "kubernetes.io/hostname"
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: postgres:17.11
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: [ALL]
          lifecycle:
            preStop:
              exec:
                command:
                  - "/usr/local/bin/pg_ctl stop -D /var/lib/postgresql/data -w -t 60 -m fast"
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "256Mi"
              cpu: "50m"
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U miniflux
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U miniflux
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: var-run
              mountPath: /var/run
            - name: storage
              mountPath: /data
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 5Mi
        - name: var-run
          emptyDir:
            sizeLimit: 5Mi
        - name: storage
          persistentVolumeClaim:
            claimName: miniflux-postgres
