apps/miniflux/components/postgres/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: postgres
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: miniflux
